<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheDoctorIsIn</string>
    <string name="action_settings">Settings</string>
    <string name="username_text">Username:</string>
    <string name="username">username</string>
    <string name="password_text">Password:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="question_view_answer_button_text">Click to answer the question</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="nick_name">Nick Name</string>
    <string name="nick_name_text">Nick Name</string>
    <string name="email">Email</string>
    <string name="upvote_description">An arrow pointing up</string>
    <string name="downvote_description">An arrow pointing down</string>
    <string name="question_list_ask">Click to ask a new question</string>
    <string name="write_question_here">Write your question here</string>
    <string-array name="categories">
        <item >Sports</item>
        <item >Entertainment</item>
        <item >Location</item>
        <item >Personal</item>
        <item >Other</item>
    </string-array>
    <string name="others_near_you">Only ask people near you</string>
    <string name="the_question_goes_here">The question goes here</string>
    <string name="write_answer_here">Write your answer here</string>
	<string name="profile">My Profile</string>
    <string name="ask">Ask A Question</string>
    <string name="food_desc">food</string>
    <string name="entertainment_desc">entertainment</string>
    <string name="personal_desc">personal</string>
    <string name="sports_desc">sports</string>
    <string name="religion_desc">religion</string>
    <string name="other_desc">other</string>
    <string name="amount_of_coins">Amount of Coins:</string>
    <string name="number_of_questions">Total Asked:</string>
    <string name="number_of_answers">Total Answered:</string>
	<string name="blank"> </string>
	<string name="pickCategory">Pick A Category</string>

</resources>
